--- a/.github/workflows/skillcheck.yml
+++ b/.github/workflows/skillcheck.yml
@@ -7,7 +7,10 @@ on:
 
 jobs:
   audit:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
@@ -18,6 +21,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e .[dev]
+      - name: Ruff lint
+        run: ruff check .
+      - name: Mypy type check
+        run: mypy skillcheck
       - name: Run unit tests
         run: pytest -q
       - name: Lint safe sample
